don't show 'Publish This Monograph' to everyone

--- a/app/views/hyrax/monographs/_show_actions.html.erb
+++ b/app/views/hyrax/monographs/_show_actions.html.erb
@@ -18,8 +18,9 @@
          data: { behavior: 'unfeature' },
          class: presenter.display_feature_link? ? 'btn btn-default collapse' : 'btn btn-default' %>
  <% end %>
-
- <%= link_to "Publish This #{@presenter.human_readable_type}", [main_app, :publish, @presenter], class: 'btn btn-primary', data: { confirm: "Publish this #{@presenter.human_readable_type}?" }, method: :post %>
+ <% if presenter.editor? %>
+   <%= link_to "Publish This #{@presenter.human_readable_type}", [main_app, :publish, @presenter], class: 'btn btn-primary', data: { confirm: "Publish this #{@presenter.human_readable_type}?" }, method: :post %>
+ <% end %>
  <!-- COinS hook for Zotero -->
  <span class="Z3988" title="<%= export_as_openurl_ctx_kev(presenter) %>"></span>
 </div>
