pan buttons for Leaflet

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require common
  *= require_tree ./application
+ *= require_tree ./common
  *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  *= require jquery-ui/datepicker
  *= require cozy-sun-bear-main
