--- a/app/views/hyrax/file_sets/media_display/_leaflet_image.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_leaflet_image.html.erb
@@ -15,5 +15,6 @@
         });
         layer = L.tileLayer.iiif("<%= riiif_url %>", { bestFit: true } );
         layer.addTo(map);
+        L.control.pan({ panOffset: 150 }).addTo(map);
     });
 </script>
