--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -1602,8 +1602,12 @@ $psu-gray-1: #3F4550;
     }
 
     .navbar-right {
-      margin-top: -3em;
+      margin-top: -1.8em;
       margin-right: 1em;
+    }
+
+    .logo {
+      margin-top: -.5em !important;
     }
 
   }
