change sidebar class to fulcrum_sidebar to avoid hyrax conflicts

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -152,7 +152,7 @@ footer.press {
 ///////////////////////////////////
 .monograph {
 
-  .sidebar {
+  .fulcrum_sidebar {
     // In hyrax2 this defaults to grey which we don't want
     background-color: white;
   }
