--- a/app/views/monograph_catalog/_index_epub.html.erb
+++ b/app/views/monograph_catalog/_index_epub.html.erb
@@ -103,7 +103,7 @@ $(document).ready(function() {
       </div>
       <% if @monograph_presenter.assets? %>
         <div role="tabpanel" class="tab-pane media row" id="media">
-          <div class="col-sm-3 sidebar">
+          <div class="col-sm-3 fulcrum_sidebar">
             <%= render 'catalog/search_sidebar' %>
           </div>
           <div class="col-sm-9">
