--- a/app/views/layouts/curation_concerns/catalog.html.erb
+++ b/app/views/layouts/curation_concerns/catalog.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
   <% if content_for?(:sidebar) %>
 
-    <div class="col-md-3 sidebar">
+    <div class="col-md-3 fulcrum_sidebar">
       <%= yield(:sidebar) %>
     </div>
 
