--- a/app/views/hyrax/file_sets/media_display_embedded/_video.html.erb
+++ b/app/views/hyrax/file_sets/media_display_embedded/_video.html.erb
@@ -1,4 +1,5 @@
 <video id="video"
+       preload="metadata"
        data-able-player
        data-include-transcript="false"
        data-allow-fullscreen="false"
