--- a/app/assets/stylesheets/embed/embed_styles.scss
+++ b/app/assets/stylesheets/embed/embed_styles.scss
@@ -16,17 +16,6 @@ html {
 
 .able-wrapper {
   .able {
-    .able-big-play-button.icon-play:before {
-      // center the big play icon relative to the whole page
-      // note: it's off-center due to the following line in ableplayer_embed.js
-      // this.$bigPlayButton.height(this.$mediaContainer.height() - 98);
-      -webkit-transform: translate3d(0,0,0);
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      margin-top: -64px;
-      margin-left: -50px;
-    }
     box-shadow: 0 0 0 0 transparent;
     .able-player.able-video {
       // shunt the controls onto the video and hide them
@@ -40,6 +29,10 @@ html {
       -ms-transition: all 2s ease;
       -o-transition: all 2s ease;
       transition: all 2s ease;
+      // NB: z-index will be ignored with default (static) position, hence this:
+      position: relative;
+      // able-big-play-button has a z-index of 6500, we need the video controls (to capture clicks) over it
+      z-index: 6501;
     }
   }
   // :active here is a first attempt to defeat sticky touch hover behavior
