--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -9,14 +9,7 @@
     <a href="#" class="btn btn-default btn-lg" role="button" data-dismiss="alert" aria-label="Close" onclick="Cookies.set('survey', 'ignore', { expires: 15 });">No thanks.</a>
   </div>
   <!-- breadcrumbs -->
-  <div class="row">
-    <nav class="breadcrumbs col-sm-12">
-      <ol class="breadcrumb">
-        <li><a href=<%= "/#{@monograph_presenter.subdomain}" %>><%= t('.home') %></a></li>
-        <li class="active"><%= @monograph_presenter.page_title %></li>
-      </ol>
-    </nav>
-  </div>
+  <%= render 'shared/breadcrumbs' %>
 <% end %><!-- provide :page_header -->
 <% if @monograph_presenter.epub? %>
     <%= render 'index_epub' %>
