--- a/app/views/shared/_add_content.html.erb
+++ b/app/views/shared/_add_content.html.erb
@@ -1,7 +1,6 @@
 <% include_works_link ||= can_ever_create_works? %>
-<% include_sub_brand_link ||= @press.present? && !@press.new_record? #&& can?(:update, @press) %>
 
-<% if include_works_link || include_collections_link || include_sub_brand_link %>
+<% if include_works_link || include_collections_link %>
   <ul class="nav navbar-nav">
     <li class="dropdown">
     <%= link_to main_app.concern_monographs_new_path, id: "add-content", class: "dropdown-toggle", data: { toggle: "dropdown"} do %>
@@ -14,11 +13,6 @@
         </li>
         <li class="divider"></li>
       <% end %>
-
-      <% if include_sub_brand_link %>
-        <li><%= link_to 'Add a Sub-Brand', main_app.new_press_sub_brand_path(@press), class: 'menu-heading new-collection', role: 'menuitem' %></li>
-      <% end %>
-
     </ul>
     </li>
   </ul>
