--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -1,13 +1,7 @@
 <% provide :page_title, @monograph_presenter.title %>
 <% provide :page_class, 'search monograph' %>
 <% provide :page_header do %>
-  <!-- survey -->
-  <div class="alert alert-info  alert-dismissible survey" role="alert" style="display: none;">
-    <a class="close" data-dismiss="alert" aria-label="Close" href="#" onclick="Cookies.set('survey', 'ignore', { expires: 15 });">&#x2715</a>
-    <p class="message">Got two minutes? Help us improve your experience on Fulcrum by answering a few questions about your visit.</p>
-    <a class="btn btn-primary btn-lg" role="button" href="https://umich.qualtrics.com/jfe/form/SV_5clJsgxZXioWanH?Book=<%= @monograph_presenter.page_title %>" target="_blank" onclick="Cookies.set('survey', 'clicked', { expires: 30 });" data-dismiss="alert">Yes, I can help.</a>
-    <a href="#" class="btn btn-default btn-lg" role="button" data-dismiss="alert" aria-label="Close" onclick="Cookies.set('survey', 'ignore', { expires: 15 });">No thanks.</a>
-  </div>
+  <%# render 'shared/survey' %>
   <!-- breadcrumbs -->
   <%= render 'shared/breadcrumbs' %>
 <% end %><!-- provide :page_header -->
