--- a/app/views/monograph_catalog/_index_epub.html.erb
+++ b/app/views/monograph_catalog/_index_epub.html.erb
@@ -1,4 +1,4 @@
-<div class="row monograph-info-epub">
+<div id="maincontent" class="row monograph-info-epub">
   <% if @monograph_presenter.monograph_coins_title? %>
       <!-- COinS for Zotero, etc -->
       <span class="Z3988" title="<%= @monograph_presenter.monograph_coins_title %>"></span>
