--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -1,70 +1,133 @@
-<% provide :sidebar do %>
-    <div id="maincontent" class="monograph-info">
-      <% if @monograph_presenter.monograph_coins_title? %>
-          <!-- COinS for Zotero, etc -->
-          <span class="Z3988" title="<%= @monograph_presenter.monograph_coins_title %>"></span>
+<div id="maincontent" class="row monograph-info-epub">
+  <% if @monograph_presenter.monograph_coins_title? %>
+      <!-- COinS for Zotero, etc -->
+      <span class="Z3988" title="<%= @monograph_presenter.monograph_coins_title %>"></span>
+  <% end %>
+  <div class="col-sm-3 monograph-cover">
+    <img class="img-responsive" src="/image-service/<%= @monograph_presenter.representative_id %>/full/225,/0/default.jpg"
+         alt="<%= @monograph_presenter.representative_alt_text %>">
+    <% if can? :edit, @monograph_presenter %>
+        <%= link_to t('monograph_catalog.index.can_edit'), main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
+  <% end %>
+  </div><!-- /.monograph-cover -->
+  <div class="col-sm-9 monograph-metadata">
+    <h2><%= @monograph_presenter.title %></h2>
+    <% if @monograph_presenter.authors? %>
+        <h3><%= render_markdown @monograph_presenter.authors %></h3>
+    <% end %>
+    <% if @monograph_presenter.editors? %>
+        <h3><%= t('monograph_catalog.index.edited_by', editors: @monograph_presenter.editors) %></h3>
+    <% end %>
+    <div class="description">
+      <%= render_markdown @monograph_presenter.description.first || '' %>
+    </div>
+    <% if @monograph_presenter.buy_url? || @monograph_presenter.epub? %>
+        <div class="btn-toolbar" role="toolbar" aria-label="">
+          <div class="btn-group" role="group" aria-label="">
+            <% if @monograph_presenter.epub? %>
+                <a id="monograph-read-btn" href="<%= epub_path(@monograph_presenter.epub) %>" title="<%= t('monograph_catalog.index.read', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-small"><%= t('monograph_catalog.index.read_book') %></a>
+            <% end %>
+            <% if @monograph_presenter.buy_url? %>
+                <a id="monograph-buy-btn" href="<%= @monograph_presenter.buy_url %>" target="_blank" title="<%= t('monograph_catalog.index.buy', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-small"><%= t('monograph_catalog.index.buy_book') %></a>
+            <% end %>
+          </div><!-- /.btn-group -->
+        </div><!-- /.btn-toolbar -->
+    <% end %>
+    <% if @monograph_presenter.isbn? %>
+        <div class="isbn">
+          <% if @monograph_presenter.isbn_hardcover? %>
+              <ul class="isbn-hardcover list-unstyled">
+                <% @monograph_presenter.isbn_hardcover.each do |isbn_hardcover| %>
+                    <li><%= t('monograph_catalog.index.isbn_hardcover', isbn: isbn_hardcover) %></li>
+                <% end %>
+              </ul>
+          <% end %>
+          <% if @monograph_presenter.isbn_paper? %>
+              <ul class="isbn-paper list-unstyled">
+                <% @monograph_presenter.isbn_paper.each do |isbn_paper| %>
+                    <li><%= t('monograph_catalog.index.isbn_paper', isbn: isbn_paper) %></li>
+                <% end %>
+              </ul>
+          <% end %>
+          <% if @monograph_presenter.isbn_ebook? %>
+              <ul class="isbn-ebook list-unstyled">
+                <% @monograph_presenter.isbn_ebook.each do |isbn_ebook| %>
+                    <li><%= t('monograph_catalog.index.isbn_ebook', isbn: isbn_ebook) %></li>
+                <% end %>
+              </ul>
+          <% end %>
+        </div> <!-- /.isbn -->
+    <% end %>
+  </div><!-- /.monograph-metadata -->
+</div><!-- /.monograph-info-epub -->
+<script>
+$(document).ready(function() {
+  // https://stackoverflow.com/a/10524697
+   var monograph_id = '<%= @monograph_presenter.id %>';
+   var previous_monograph_id = localStorage.getItem('monograph_id');
+   localStorage.setItem('monograph_id', monograph_id);
+
+   if (monograph_id !== previous_monograph_id) {
+     localStorage.removeItem('lastTab');
+   }
+
+  // for bootstrap 3 use 'shown.bs.tab', for bootstrap 2 use 'shown' in the next line
+  $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+    // save the latest tab; use cookies if you like 'em better:
+    localStorage.setItem('lastTab', $(this).attr('href'));
+  });
+
+  // go to the latest tab, if it exists:
+  var lastTab = localStorage.getItem('lastTab');
+  if (lastTab) {
+    $('[href="' + lastTab + '"]').tab('show');
+  }
+});
+</script>
+<div class="row monograph-assets-toc-epub">
+  <div class="col-sm-12">
+    <ul class="nav nav-tabs" role="tablist">
+      <% if @monograph_presenter.epub? %>
+        <li role="presentation" class="active"><a href="#toc" aria-controls="toc" role="tab" data-toggle="tab">Table of Contents</a></li>
       <% end %>
-      <div class="monograph-cover">
-        <%= render 'hyrax/base/representative_media', presenter: @monograph_presenter %>
-      </div><!-- /.monograph-cover -->
-      <div class="monograph-metadata">
-        <h2><%= @monograph_presenter.title %></h2>
-        <% if can? :edit, @monograph_presenter %>
-            <%= link_to t('monograph_catalog.index.can_edit'), main_app.monograph_show_path(@monograph_presenter.id), class: 'btn btn-primary', id: 'manage-monograph-button' %>
-            <%= link_to t('monograph_catalog.index.reindex'), main_app.monograph_reindex_path(@monograph_presenter.id), method: :patch, class: 'btn btn-primary', id: 'monograph-reindex-button' %>
+      <% if @monograph_presenter.assets? %>
+        <% if @monograph_presenter.epub? %>
+          <li role="presentation"><a href="#media" aria-controls="media" role="tab" data-toggle="tab">Media</a></li>
+        <% else %>
+          <li role="presentation" class="active"><a href="#media" aria-controls="media" role="tab" data-toggle="tab">Media</a></li>
         <% end %>
-        <% if @monograph_presenter.authors? %>
-            <h3><%= render_markdown @monograph_presenter.authors %></h3>
+      <% end %>
+      <li role="presentation"><a href="#stats" aria-controls="stats" role="tab" data-toggle="tab">Stats</a></li>
+    </ul>
+    <div class="tab-content monograph-assets-toc-epub-content">
+      <% if @monograph_presenter.epub? %>
+        <div role="tabpanel" class="tab-pane active toc row" id="toc">
+          <div class="col-sm-12">
+            <%= render 'index_epub_toc' %>
+          </div>
+        </div>
+      <% end %>
+      <% if @monograph_presenter.assets? %>
+        <% if @monograph_presenter.epub? %>
+          <div role="tabpanel" class="tab-pane media row" id="media">
+        <% else %>
+          <div role="tabpanel" class="tab-pane active media row" id="media">
         <% end %>
-        <% if @monograph_presenter.editors? %>
-            <h3><%= t('monograph_catalog.index.edited_by', editors: @monograph_presenter.editors) %></h3>
-        <% end %>
-        <div class="description">
-          <%= render_markdown @monograph_presenter.description.first || '' %>
-        </div><!-- /.description -->
-        <div class="pageviews">
+          <div class="col-sm-3 fulcrum_sidebar">
+            <%= render 'catalog/search_sidebar' %>
+          </div>
+          <div class="col-sm-9">
+            <div class="content">
+              <%= render 'catalog/search_results' %>
+            </div><!-- /.content -->
+          </div>
+        </div>
+      <% end %>
+      <div role="tabpanel" class="tab-pane stats row" id="stats">
+        <div class="col-sm-12 pageviews">
           <p><%= t('monograph_catalog.index.pageviews_html', count: number_with_delimiter(@monograph_presenter.pageviews)) %></p>
         </div><!-- /.pageviews -->
-        <div><p></p></div>
-        <% if @monograph_presenter.isbn? %>
-            <div class="isbn">
-              <% if @monograph_presenter.isbn_hardcover? %>
-                  <ul class="isbn-hardcover list-unstyled">
-                    <% @monograph_presenter.isbn_hardcover.each do |isbn_hardcover| %>
-                        <li><%= t('monograph_catalog.index.isbn_hardcover', isbn: isbn_hardcover) %></li>
-                    <% end %>
-                  </ul>
-              <% end %>
-              <% if @monograph_presenter.isbn_paper? %>
-                  <ul class="isbn-paper list-unstyled">
-                    <% @monograph_presenter.isbn_paper.each do |isbn_paper| %>
-                        <li><%= t('monograph_catalog.index.isbn_paper', isbn: isbn_paper) %></li>
-                    <% end %>
-                  </ul>
-              <% end %>
-              <% if @monograph_presenter.isbn_ebook? %>
-                  <ul class="isbn-ebook list-unstyled">
-                    <% @monograph_presenter.isbn_ebook.each do |isbn_ebook| %>
-                        <li><%= t('monograph_catalog.index.isbn_ebook', isbn: isbn_ebook) %></li>
-                    <% end %>
-                  </ul>
-              <% end %>
-            </div> <!-- /.isbn -->
-        <% end %>
-        <% if @monograph_presenter.buy_url? %>
-            <div class="btn-toolbar" role="toolbar" aria-label="">
-              <div class="btn-group" role="group" aria-label="">
-                <% if @monograph_presenter.buy_url? %>
-                    <a id="monograph-buy-btn" href="<%= @monograph_presenter.buy_url %>" target="_blank" title="<%= t('monograph_catalog.index.buy', title: @monograph_presenter.title) %>" role="button" class="btn btn-default btn-small"><%= t('monograph_catalog.index.buy_book') %></a>
-                <% end %>
-              </div><!-- /.btn-group -->
-            </div><!-- /.btn-toolbar -->
-        <% end %>
-      </div><!-- /.monograph-metadata -->
-    </div><!-- /.monograph-info -->
-    <hr>
-    <%= render 'catalog/search_sidebar' %>
-<% end %><!-- provide :sidebar -->
-<div class="content">
-  <%= render 'catalog/search_results' %>
-</div><!-- /.content -->
+      </div>
+    </div>
+  </div>
+</div><!-- /.monograph-assets-toc-epub -->
