--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -4,7 +4,7 @@
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
 <% provide :body do %>
-<% if false && defined? @presenter.file_set_coins_title %>
+<% if defined? @presenter.file_set_coins_title %>
   <span class="Z3988" title="<%= @presenter.file_set_coins_title %>"></span>
 <% end %>
 <div id="epub" class="<%= @subdomain %>">
