Fixes #1497 3-d model reload issues.
Also updated a javascript fix in workflow_actions_affix.js from
a curation concerns fix to a hyrax one, comments in that file.

--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -92,7 +92,7 @@ $(document).ready(function() {
         <% end %>
       <% end %>
       <% if @monograph_presenter.webgl? %>
-        <li role="presentation"><a href="#webgl" aria-controls="webgl" role="tab" data-toggle="tab">3-D Model</a></li>
+        <li id="webgl-tab" role="presentation"><a href="#webgl" aria-controls="webgl" role="tab" data-toggle="tab">3-D Model</a></li>
       <% end %>
       <li role="presentation"><a href="#stats" aria-controls="stats" role="tab" data-toggle="tab">Stats</a></li>
     </ul>
