--- a/app/views/monograph_catalog/_stats.html.erb
+++ b/app/views/monograph_catalog/_stats.html.erb
@@ -7,13 +7,13 @@
   <div class="col-sm-12">
     <div class="alert alert-info">
       <i class="glyphicon glyphicon-signal large-icon"></i>
-      <%= t('monograph_catalog.index.pageviews_html', count: number_with_delimiter(@monograph_presenter.pageviews_count), date: @monograph_presenter.date_uploaded.strftime("%B %d, %Y")) %>
+      <%= t('pageviews_html', count: number_with_delimiter(@monograph_presenter.pageviews_count), date: @monograph_presenter.date_uploaded.strftime("%B %d, %Y")) %>
     </div>
-    <div class="stats-container">
+    <div class="stats-container usage">
       <div id="usage-stats" class="stats-placeholder"></div>
     </div>
-    <div class="stats-container" style="height:150px;">
-      <div id="overview" class="stats-placeholder" style="width: 100%"></div>
+    <div class="stats-container overview">
+      <div id="overview" class="stats-placeholder"></div>
     </div>
   </div>
 </div>
