--- a/fulcrum/_includes/footer.html
+++ b/fulcrum/_includes/footer.html
@@ -57,11 +57,11 @@
     }
 
     if (signed_in) {
-      $('#sign-in').prop("href", "/users/sign_out")
+      $('#sign-in').prop("href", "/logout")
       $('#sign-in').text("Log Out");
     }
     else {
-      $('#sign-in').prop("href", "/users/sign_in")
+      $('#sign-in').prop("href", "/login")
       $('#sign-in').text("Log In");
     }
   </script>
