Resolves 1367 Remove E-book Reader's Footer.

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -649,6 +649,12 @@ footer.press {
   }
 }
 
+/* Feel free to be horrified at the bonkers-ness of this construct. */
+.cozy-panel-toolbar div.cozy-control:not(:first-of-type) {
+  border-left: 1px solid white;
+}
+
+
 ///////////////////////////////////
 // SITE REQUIRES COOKIES ALERT
 ///////////////////////////////////
