Resolves #1541: Restrict the Gabii EPUB

--- a/app/views/hyrax/base/_member.html.erb
+++ b/app/views/hyrax/base/_member.html.erb
@@ -9,6 +9,9 @@
     <%= render 'actions', member: member %>
   </td>
   <td>
+    <%= render 'e_pubs/form', member: member %>
+  </td>
+  <td>
     <%= render 'featured_representatives/form', member: member %>
   </td>
 </tr>
